fix: refactor and arrange components z-index prop (#177)
* Refactor and arrange components z-index prop

* Refactor code, update concept page

* Refactor code

* Update drawer z-index to 700

* Fix z-index

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -8,6 +8,7 @@
         background-color: rgba(0, 0, 0, 0.5);
         opacity: 0;
         transition: opacity var(--transition-duration) ease-in-out;
+        z-index: 700;
     }
 
     &__overlay--entered {
